style: mobile improvements

--- a/content/about-pages/data.mdx
+++ b/content/about-pages/data.mdx
@@ -12,7 +12,7 @@ SSH Open Marketplace. Over the 3 years of the SSHOC project, 15 sources have
 been ingested for a total of over 5,000 individual items. The sources are listed
 below.
 
-<div className="grid" style="grid-template-columns: 150px 1fr; gap: 2rem 1rem">
+<div className="grid gap-y-4 grid-cols-[100px_1fr] xs:grid-cols-[150px_1fr] gap-x-4">
 
 ![TAPoR logo](/assets/images/source_TAPoR_logo.png "TAPoR logo")
 
@@ -126,7 +126,7 @@ suggest new sources.
 The conceptual approach used to structure and classify the content of the SSH
 Open Marketplace led to the identification of 5 main content types.
 
-<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
+<div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
 ![Tool or service](/assets/images/categories/tool-or-service.svg "Tool or service logo")
 
@@ -148,7 +148,7 @@ software for all kinds of graphs and networks.
 </div>
 </div>
 
-<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
+<div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
 ![Training Material](/assets/images/categories/training-material.svg "Training Material")
 
@@ -166,7 +166,7 @@ website).
 </div>
 </div>
 
-<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
+<div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
 ![Workflow](/assets/images/categories/workflow.svg "Workflow logo")
 
@@ -184,7 +184,7 @@ workflow composed of 13 steps coming from the Standardization Survival Kit.
 </div>
 </div>
 
-<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
+<div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
 ![Dataset](/assets/images/categories/dataset.svg "Dataset logo")
 
@@ -201,7 +201,7 @@ _Example:_ [Parlamint 2.0](/dataset/9LlGMD)
 </div>
 </div>
 
-<div className="grid" style="grid-template-columns: 60px 1fr; column-gap: 1rem">
+<div className="grid gap-y-4 grid-cols-[60px_1fr] gap-x-4">
 
 ![Publication](/assets/images/categories/publication.svg "Publication logo")
 
