style: improve table heading with footnote

--- a/content/contribute-pages/metadata-guidelines.mdx
+++ b/content/contribute-pages/metadata-guidelines.mdx
@@ -29,13 +29,18 @@ should check if you are a moderator.
 
 ### Guidance for metadata fields
 
-| Property Field's name             | How to fill in? Some recommendations for contributors                                                                                                                                                                                             | Quality checks: what and how moderators can validate content "Dashboard" = problematic items are automatically flagged and prioritised for curation within the editorial dashboard "Manually" = moderator has to assess coherence and relevance of the info |
-| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Accessible at = "Go to..." button | URL of the resource. Landing page of the resource which could be the persistent identifier. Ideally, only one URL should be added as accessibleAt. For other URLs, see "externalID".                                                              | Check that link is working (=> dashboard)                                                                                                                                                                                                                   |
-| Access Policy URL                 | URL pointing to information about the access policy that applies to the Resource. Follows EOSC Portal Providers Documentation Related to `Authentication`                                                                                         | Moderators will check for coherence of access policy url with linked Marketplace entry. (=> manually) Check that link is working (=> dashboard)                                                                                                             |
-| Activity                          | Contributors will select a term, drawn from the controlled vocabulary TaDIRAH, that describes the activities you can perform using the resource showcased in the SSH Open Marketplace Entry.                                                      | Moderators will check for consistency between activity selected and the resource described. (=> manually)                                                                                                                                                   |
-| Actors                            | An Actor is a person or an organisation who contributed in some way to the creation of the linked resource described in the SSH Open Marketplace. Name of an actor is mandatory: while creating an actor, you need at least to add a name.        | Moderators will ensure the consistency of the actors database (=> dashboard): one actor should only be registered once.                                                                                                                                     |
-|                                   | Define role as one of: contributor author reviewer director programmer editor provider contact funder helpdesk By default, the Actor's role is contributor. Add ExternalID for actors: ORCID, recommended. Add ROR IDs for research organisation. | It is recommended that the Actor(s) be identified by an externalID (esp. ORCID). Anything that can help to identify the contributor is recommended                                                                                                          |
+| Property Field's name             | How to fill in? Some recommendations for contributors                                                                                                                                                                                             | Quality checks: what and how moderators can validate content "Dashboard"[^1]                                                                       |
+| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Accessible at = "Go to..." button | URL of the resource. Landing page of the resource which could be the persistent identifier. Ideally, only one URL should be added as accessibleAt. For other URLs, see "externalID".                                                              | Check that link is working (=> dashboard)                                                                                                          |
+| Access Policy URL                 | URL pointing to information about the access policy that applies to the Resource. Follows EOSC Portal Providers Documentation Related to `Authentication`                                                                                         | Moderators will check for coherence of access policy url with linked Marketplace entry. (=> manually) Check that link is working (=> dashboard)    |
+| Activity                          | Contributors will select a term, drawn from the controlled vocabulary TaDIRAH, that describes the activities you can perform using the resource showcased in the SSH Open Marketplace Entry.                                                      | Moderators will check for consistency between activity selected and the resource described. (=> manually)                                          |
+| Actors                            | An Actor is a person or an organisation who contributed in some way to the creation of the linked resource described in the SSH Open Marketplace. Name of an actor is mandatory: while creating an actor, you need at least to add a name.        | Moderators will ensure the consistency of the actors database (=> dashboard): one actor should only be registered once.                            |
+|                                   | Define role as one of: contributor author reviewer director programmer editor provider contact funder helpdesk By default, the Actor's role is contributor. Add ExternalID for actors: ORCID, recommended. Add ROR IDs for research organisation. | It is recommended that the Actor(s) be identified by an externalID (esp. ORCID). Anything that can help to identify the contributor is recommended |
+
+[^1]:
+    Problematic items are automatically flagged and prioritised for curation
+    within the editorial dashboard "Manually". Moderator has to assess coherence
+    and relevance of the info
 
 ### Vocabularies
 
