docs: add metadata table

--- a/content/contribute-pages/metadata-guidelines.mdx
+++ b/content/contribute-pages/metadata-guidelines.mdx
@@ -25,7 +25,237 @@ should check if you are a moderator.
   the process of curation, and these are only visible to moderators that have
   logged in.
 
-[RECOMMENDED TABLE]
+<table className="metadata-table">
+  <thead>
+    <tr>
+      <th>Property Field</th>
+      <th>Tools & Services</th>
+      <th>Training Material</th>
+      <th>Publication</th>
+      <th>Datasets</th>
+      <th>Workflows</th>
+      <th>Steps (of a workflow)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Generic Metadata</td>
+    </tr>
+    <tr>
+      <td>label</td>
+      <td
+        colspan="6"
+      >
+        mandatory
+      </td>
+    </tr>
+    <tr>
+      <td>description</td>
+      <td colspan="6">mandatory</td>
+    </tr>
+    <tr>
+      <td>actor</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>accessibleAt</td>
+      <td colspan="4">recommended</td>
+    </tr>
+    <tr>
+      <td>externalID</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>media</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>thumbnail</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>relatedItems</td>
+      <td colspan="6">recommended</td>
+    </tr>
+<!---->
+    <tr>
+      <td>Categorisation metadata</td>
+    </tr>
+    <tr>
+      <td>activity</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>keyword</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>discipline</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>language</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>tool-family</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>service-type</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>mode-of-use</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>object-format</td>
+      <td />
+      <td colspan="1">recommended</td>
+      <td />
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>extent</td>
+      <td />
+      <td colspan="3">recommended</td>
+    </tr>
+    <tr>
+      <td>IntendedAudience</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>standard</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>resource-category</td>
+      <td colspan="5">recommended</td>
+    </tr>
+<!---->
+    <tr>
+      <td>Context metadata</td>
+    </tr>
+    <tr>
+      <td>see-also</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>usermanual-url</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>helpdesk-url</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>service-level-url</td>
+    </tr>
+<!---->
+    <tr>
+      <td>Access metadata</td>
+    </tr>
+    <tr>
+      <td>license</td>
+      <td colspan="5">recommended</td>
+    </tr>
+    <tr>
+      <td>termsofuse-url</td>
+      <td colspan="2">recommended</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>terms-of-use</td>
+    </tr>
+    <tr>
+      <td>accesspolicy-url</td>
+    </tr>
+    <tr>
+      <td>geographical-availabilities</td>
+    </tr>
+    <tr>
+      <td>privacypolicy-url</td>
+    </tr>
+    <tr>
+      <td>authentication</td>
+    </tr>
+<!---->
+    <tr>
+      <td>Bibliographic metadata</td>
+    </tr>
+    <tr>
+      <td>publication-type</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>publisher</td>
+      <td/>
+      <td/>
+      <td colspan="2">recommended</td>
+    </tr>
+    <tr>
+      <td>publication-place</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>year</td>
+      <td/>
+      <td colspan="3">recommended</td>
+    </tr>
+    <tr>
+      <td>journal</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>conference</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>volume</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>issue</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>pages</td>
+      <td/>
+      <td/>
+      <td colspan="1">recommended</td>
+    </tr>
+<!---->
+    <tr>
+      <td>Technical metadata</td>
+    </tr>
+    <tr>
+      <td>life-cycle-status</td>
+    </tr>
+    <tr>
+      <td>technical-readiness-level</td>
+      <td colspan="1">recommended</td>
+    </tr>
+    <tr>
+      <td>version</td>
+      <td colspan="1">recommended</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Guidance for metadata fields
 
