style: improve table style

--- a/content/contribute-pages/metadata-guidelines.mdx
+++ b/content/contribute-pages/metadata-guidelines.mdx
@@ -39,219 +39,232 @@ should check if you are a moderator.
   </thead>
   <tbody>
     <tr>
-      <td>Generic Metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Generic Metadata
+      </th>
     </tr>
     <tr>
-      <td>label</td>
-      <td
-        colspan="6"
-      >
-        mandatory
-      </td>
-    </tr>
-    <tr>
-      <td>description</td>
+      <th scope="row">label</th>
       <td colspan="6">mandatory</td>
     </tr>
     <tr>
-      <td>actor</td>
+      <th scope="row">description</th>
+      <td colspan="6">mandatory</td>
+    </tr>
+    <tr>
+      <th scope="row">actor</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>accessibleAt</td>
+      <th scope="row">accessibleAt</th>
       <td colspan="4">recommended</td>
     </tr>
     <tr>
-      <td>externalID</td>
+      <th scope="row">externalID</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>media</td>
+      <th scope="row">media</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>thumbnail</td>
+      <th scope="row">thumbnail</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>relatedItems</td>
+      <th scope="row">relatedItems</th>
       <td colspan="6">recommended</td>
     </tr>
-<!---->
+  </tbody>
+  <tbody>
     <tr>
-      <td>Categorisation metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Categorisation metadata
+      </th>
     </tr>
     <tr>
-      <td>activity</td>
+      <th scope="row">activity</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>keyword</td>
+      <th scope="row">keyword</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>discipline</td>
+      <th scope="row">discipline</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>language</td>
+      <th scope="row">language</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>tool-family</td>
+      <th scope="row">tool-family</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>service-type</td>
+      <th scope="row">service-type</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>mode-of-use</td>
+      <th scope="row">mode-of-use</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>object-format</td>
+      <th scope="row">object-format</th>
       <td />
       <td colspan="1">recommended</td>
       <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>extent</td>
+      <th scope="row">extent</th>
       <td />
       <td colspan="3">recommended</td>
     </tr>
     <tr>
-      <td>IntendedAudience</td>
+      <th scope="row">IntendedAudience</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>standard</td>
+      <th scope="row">standard</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>resource-category</td>
+      <th scope="row">resource-category</th>
       <td colspan="5">recommended</td>
     </tr>
-<!---->
+  </tbody>
+  <tbody>
     <tr>
-      <td>Context metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Context metadata
+      </th>
     </tr>
     <tr>
-      <td>see-also</td>
+      <th scope="row">see-also</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>usermanual-url</td>
+      <th scope="row">usermanual-url</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>helpdesk-url</td>
+      <th scope="row">helpdesk-url</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>service-level-url</td>
+      <th scope="row">service-level-url</th>
     </tr>
-<!---->
+  </tbody>
+  <tbody>
     <tr>
-      <td>Access metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Access metadata
+      </th>
     </tr>
     <tr>
-      <td>license</td>
+      <th scope="row">license</th>
       <td colspan="5">recommended</td>
     </tr>
     <tr>
-      <td>termsofuse-url</td>
+      <th scope="row">termsofuse-url</th>
       <td colspan="2">recommended</td>
-      <td/>
-      <td/>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>terms-of-use</td>
+      <th scope="row">terms-of-use</th>
     </tr>
     <tr>
-      <td>accesspolicy-url</td>
+      <th scope="row">accesspolicy-url</th>
     </tr>
     <tr>
-      <td>geographical-availabilities</td>
+      <th scope="row">geographical-availabilities</th>
     </tr>
     <tr>
-      <td>privacypolicy-url</td>
+      <th scope="row">privacypolicy-url</th>
     </tr>
     <tr>
-      <td>authentication</td>
+      <th scope="row">authentication</th>
     </tr>
-<!---->
+  </tbody>
+  <tbody>
     <tr>
-      <td>Bibliographic metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Bibliographic metadata
+      </th>
     </tr>
     <tr>
-      <td>publication-type</td>
-      <td/>
-      <td/>
+      <th scope="row">publication-type</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>publisher</td>
-      <td/>
-      <td/>
+      <th scope="row">publisher</th>
+      <td />
+      <td />
       <td colspan="2">recommended</td>
     </tr>
     <tr>
-      <td>publication-place</td>
-      <td/>
-      <td/>
+      <th scope="row">publication-place</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>year</td>
-      <td/>
+      <th scope="row">year</th>
+      <td />
       <td colspan="3">recommended</td>
     </tr>
     <tr>
-      <td>journal</td>
-      <td/>
-      <td/>
+      <th scope="row">journal</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>conference</td>
-      <td/>
-      <td/>
+      <th scope="row">conference</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>volume</td>
-      <td/>
-      <td/>
+      <th scope="row">volume</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>issue</td>
-      <td/>
-      <td/>
+      <th scope="row">issue</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>pages</td>
-      <td/>
-      <td/>
+      <th scope="row">pages</th>
+      <td />
+      <td />
       <td colspan="1">recommended</td>
     </tr>
-<!---->
+  </tbody>
+  <tbody>
     <tr>
-      <td>Technical metadata</td>
+      <th scope="rowgroup" colspan="7">
+        Technical metadata
+      </th>
     </tr>
     <tr>
-      <td>life-cycle-status</td>
+      <th scope="row">life-cycle-status</th>
     </tr>
     <tr>
-      <td>technical-readiness-level</td>
+      <th scope="row">technical-readiness-level</th>
       <td colspan="1">recommended</td>
     </tr>
     <tr>
-      <td>version</td>
+      <th scope="row">version</th>
       <td colspan="1">recommended</td>
     </tr>
   </tbody>
