feat: add table of contents to docs page

--- a/content/contribute-pages/metadata-guidelines.mdx
+++ b/content/contribute-pages/metadata-guidelines.mdx
@@ -13,7 +13,7 @@ explanations about the fields themselves - in case the title is not
 self-explanatory - how to fill in a field if you create an item and what you
 should check if you are a moderator.
 
-### Metadata status
+## Metadata status
 
 - **Mandatory** fields are clearly indicated in the edit forms and you won't be
   able to submit an item if these fields are empty
@@ -270,7 +270,7 @@ should check if you are a moderator.
   </tbody>
 </table>
 
-### Guidance for metadata fields
+## Guidance for metadata fields
 
 | Property Field's name             | How to fill in? Some recommendations for contributors                                                                                                                                                                                             | Quality checks: what and how moderators can validate content "Dashboard"[^1]                                                                       |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -285,7 +285,7 @@ should check if you are a moderator.
     within the editorial dashboard "Manually". Moderator has to assess coherence
     and relevance of the info
 
-### Vocabularies
+## Vocabularies
 
 | property                   | vocabulary                                                                                                                                           | type of vocabulary |
 | -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ |
