--- a/content/contribute-pages/moderator-guidelines.mdx
+++ b/content/contribute-pages/moderator-guidelines.mdx
@@ -2,6 +2,7 @@
 title: Moderator Guidelines
 ord: 5
 menu: Moderator Guidelines
+toc: true
 ---
 
 The Moderation of the SSH Open Marketplace can be considered in two ways, the
