docs: fix link, add url fragments

--- a/content/contribute-pages/administrator-guidelines.mdx
+++ b/content/contribute-pages/administrator-guidelines.mdx
@@ -7,15 +7,16 @@ toc: true
 
 ## Ingest pipeline management
 
-As described in the ["data ingestion workflow" section](/about/implementation),
+As described in the
+["data ingestion workflow" section](/about/implementation#data-ingestion-workflow),
 the ingestion pipeline covers several steps that should be overseen by an
 Administrator for every new source to be added to the SSH Open Marketplace.
 
 1. **Suggest a new source to harvest**. A source can be suggested by a
    Contributor or Moderator via the [contact form](/contact). The decision to
    include a new source has to be met based on the
-   [source inclusion criteria](/about/data) and on a consensual basis within the
-   Editorial team.
+   [source inclusion criteria](/about/data#inclusion-criteria) and on a
+   consensual basis within the Editorial team.
 2. **Define mappings**. A mapping from the source data model to the Marketplace
    data model has to be devised in each case. This mapping is prepared in a
    spreadsheet by one of the Moderators and reviewed by at least another. This
