--- a/content/contribute-pages/overview.mdx
+++ b/content/contribute-pages/overview.mdx
@@ -29,19 +29,21 @@ contributions is explained in these pages:
    [edit and enrich existing items](/contribute/enrich-an-individual-item)
 2. You have noticed that your favorite tool or training material is not
    referenced in the SSH Open Marketplace and you would like to add it, follow
-   our guidelines to [create an individual item](/contribute/create-an-individual-item)
+   our guidelines to
+   [create an individual item](/contribute/create-an-individual-item)
 3. The mass ingests are managed by the Editorial Team, but you can
    [Suggest a new source](/about/data#inclusion-criteria)
 
 As a **moderator** or **administrator**, you are a member of the
 [Editorial Team](/about/team), and you have some missions to ensure the SSH Open
-Marketplace quality. The [moderator guidelines](/contribute/moderator-guidelines) and the
-[administrator guidelines](/contribute/administrator-guidelines) are the public documentation providing an overview
-of these missions. Are you interested in joining the editorial team? Get in
-touch with us!
+Marketplace quality. The
+[moderator guidelines](/contribute/moderator-guidelines) and the
+[administrator guidelines](/contribute/administrator-guidelines) are the public
+documentation providing an overview of these missions. Are you interested in
+joining the editorial team? Get in touch with us!
 
 Like the SSH Open Marketplace? Speak about it around you and help us to promote
 this discovery service for Social Sciences and Humanities.
-[Here are some useful materials](/about/service#inclusion-criteria). Let us know when and where you
-have acted as an ambassador of the Marketplace and contact us if you need
-additional information!
+[Here are some useful materials](/about/data#inclusion-criteria). Let us know
+when and where you have acted as an ambassador of the Marketplace and contact us
+if you need additional information!
