--- a/content/contribute-pages/enrich-an-individual-item.mdx
+++ b/content/contribute-pages/enrich-an-individual-item.mdx
@@ -13,7 +13,8 @@ information.
 ![Screenshot of the edit form - "3DHOP - How To" item](/assets/images/edit_training.png "Screenshot of the edit form - '3DHOP - How To' item")
 
 If you need some explanation or examples for some of the metadata fields, please
-consult the ["Guidance for metadata fields" table](/contribute/metadata-guidelines).
+consult the
+["Guidance for metadata fields" table](/contribute/metadata-guidelines#guidance-for-metadata-fields).
 
 You may save your edits as a draft, without making a final submission, by using
 the Save as Draft button. Once you have finished, click "Publish" and it will go
